[gd_scene load_steps=4 format=3 uid="uid://bh2cea70587dl"]

[ext_resource type="Script" path="res://scripts/world/flora/heat_flower.gd" id="1_gt3c4"]
[ext_resource type="Texture2D" uid="uid://d2qxuxvomwjc3" path="res://art/pixelArts/heat_flower.png" id="2_bhdwo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sergr"]
size = Vector2(116.177, 116.177)

[node name="HeatFlower" type="Node2D"]
scale = Vector2(2.04375, 2.04375)
script = ExtResource("1_gt3c4")

[node name="poly" type="Node2D" parent="."]
position = Vector2(2, 2)

[node name="leg2" type="Polygon2D" parent="poly"]
position = Vector2(1.34613, -8.573)
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(50.9402, 73.6712, 57.0913, 73.7578, 54.7522, 99.5751, 49.9872, 99.7484)
uv = PackedVector2Array(50.9402, 73.6712, 57.0913, 73.7578, 54.7522, 99.5751, 49.9872, 99.7484)
bones = ["leg2", PackedFloat32Array(1, 1, 1, 1), "leg2/leg", PackedFloat32Array(0, 0, 0, 0), "leg2/leg/center", PackedFloat32Array(0, 0, 0, 0), "leg2/leg/center/top_right", PackedFloat32Array(0, 0, 0, 0), "leg2/leg/center/top_right/end_node", PackedFloat32Array(0, 0, 0, 0), "leg2/leg/center/bottom_right", PackedFloat32Array(0, 0, 0, 0), "leg2/leg/center/bottom_right/end_node", PackedFloat32Array(0, 0, 0, 0), "leg2/leg/center/top_left", PackedFloat32Array(0, 0, 0, 0), "leg2/leg/center/top_left/end_node", PackedFloat32Array(0, 0, 0, 0), "leg2/leg/center/bottom_left", PackedFloat32Array(0, 0, 0, 0), "leg2/leg/center/bottom_left/end_node", PackedFloat32Array(0, 0, 0, 0)]

[node name="leg1" type="Polygon2D" parent="poly"]
position = Vector2(0.41035, -4.61581)
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(57.1174, 48.1204, 53.3307, 48.3647, 52.4145, 73.6501, 56.3234, 73.2225, 57.9724, 61.2517)
uv = PackedVector2Array(57.1174, 48.1204, 53.3307, 48.3647, 52.4145, 73.6501, 56.3234, 73.2225, 57.9724, 61.2517)
bones = ["leg2", PackedFloat32Array(0, 0, 0.5, 0.5, 0), "leg2/leg", PackedFloat32Array(1, 1, 1, 1, 1), "leg2/leg/center", PackedFloat32Array(0.5, 0.5, 0, 0, 0), "leg2/leg/center/top_right", PackedFloat32Array(0, 0, 0, 0, 0), "leg2/leg/center/top_right/end_node", PackedFloat32Array(0, 0, 0, 0, 0), "leg2/leg/center/bottom_right", PackedFloat32Array(0, 0, 0, 0, 0), "leg2/leg/center/bottom_right/end_node", PackedFloat32Array(0, 0, 0, 0, 0), "leg2/leg/center/top_left", PackedFloat32Array(0, 0, 0, 0, 0), "leg2/leg/center/top_left/end_node", PackedFloat32Array(0, 0, 0, 0, 0), "leg2/leg/center/bottom_left", PackedFloat32Array(0, 0, 0, 0, 0), "leg2/leg/center/bottom_left/end_node", PackedFloat32Array(0, 0, 0, 0, 0)]

[node name="center" type="Polygon2D" parent="poly"]
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(53.0271, 28.3236, 46.3501, 35.5242, 50.5396, 44.9506, 60.0968, 46.7835, 65.8574, 41.4157, 66.381, 34.4769, 60.8823, 28.1926)
uv = PackedVector2Array(53.0271, 28.3236, 46.3501, 35.5242, 50.5396, 44.9506, 60.0968, 46.7835, 65.8574, 41.4157, 66.381, 34.4769, 60.8823, 28.1926)
bones = ["leg2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0), "leg2/leg", PackedFloat32Array(1, 1, 1, 1, 1, 1, 1), "leg2/leg/lowtop_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right/top_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0)]

[node name="top_right" type="Polygon2D" parent="poly"]
position = Vector2(-7.38226, 3.38226)
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(61.0642, 25.9935, 67.7351, 38.3824, 83.5893, 37.3427, 88.0919, 24.0001, 81.9408, 15.7698)
uv = PackedVector2Array(61.0642, 25.9935, 67.7351, 38.3824, 83.5893, 37.3427, 88.0919, 24.0001, 81.9408, 15.7698)
bones = ["leg2", PackedFloat32Array(0, 0, 0, 0, 0), "leg2/leg", PackedFloat32Array(0, 0, 0, 0, 0), "leg2/leg/lowtop_right", PackedFloat32Array(1, 1, 0, 0, 0), "leg2/leg/lowtop_right/top_right", PackedFloat32Array(0.5, 0.5, 1, 1, 1)]

[node name="top_left" type="Polygon2D" parent="poly"]
position = Vector2(4.85015, 5.33945)
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(41.582, 13.1641, 30.3982, 17.2595, 27.6417, 20.4887, 28.5868, 27.9708, 36.8565, 32.8539, 45.5988, 33.8777, 48.9067, 29.7035, 53.0021, 25.293, 48.1978, 17.8108)
uv = PackedVector2Array(41.582, 13.1641, 30.3982, 17.2595, 27.6417, 20.4887, 28.5868, 27.9708, 36.8565, 32.8539, 45.5988, 33.8777, 48.9067, 29.7035, 53.0021, 25.293, 48.1978, 17.8108)
bones = ["leg2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right/bottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right/top_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left", PackedFloat32Array(0, 0, 0, 0, 0.5, 1, 1, 1, 0.5), "leg2/leg/lowtop_left/top_left", PackedFloat32Array(1, 1, 1, 1, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left/bottom_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0)]

[node name="bottom_left" type="Polygon2D" parent="poly"]
position = Vector2(3.38226, -2.4893)
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(47.8788, 38.3318, 49.756, 42.0028, 52.259, 48.2184, 43.7907, 59.3565, 36.1985, 59.9822, 31.1092, 55.6855, 32.3606, 45.4235, 41.8718, 38.9576)
uv = PackedVector2Array(47.8788, 38.3318, 49.756, 42.0028, 52.259, 48.2184, 43.7907, 59.3565, 36.1985, 59.9822, 31.1092, 55.6855, 32.3606, 45.4235, 41.8718, 38.9576)
bones = ["leg2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right/bottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right/top_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left/top_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left", PackedFloat32Array(1, 1, 1, 0, 0, 0, 0, 1), "leg2/leg/lowbottom_left/bottom_left", PackedFloat32Array(0, 0, 0, 1, 1, 1, 1, 0)]

[node name="bottom_right" type="Polygon2D" parent="poly"]
position = Vector2(-6.40367, -2)
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(66.6615, 37.8675, 65.2549, 42.52, 60.8188, 46.848, 70.0148, 57.1266, 80.1855, 56.9102, 86.5693, 51.1756, 84.8391, 43.0617, 76.0749, 39.1665)
uv = PackedVector2Array(66.6615, 37.8675, 65.2549, 42.52, 60.8188, 46.848, 70.0148, 57.1266, 80.1855, 56.9102, 86.5693, 51.1756, 84.8391, 43.0617, 76.0749, 39.1665)
bones = ["leg2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right", PackedFloat32Array(1, 1, 1, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right/bottom_right", PackedFloat32Array(0, 0, 0, 1, 1, 1, 1, 0.5), "leg2/leg/lowtop_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right/top_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left/top_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left/bottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0)]

[node name="nectar_top" type="Polygon2D" parent="poly"]
position = Vector2(29.315, -3.95719)
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(25.4755, 27.8717, 26.4433, 32.0011, 29.734, 35.937, 29.9276, 41.9377, 25.3465, 41.3569, 23.4108, 37.0339, 20.1201, 32.5818, 19.6684, 28.0007)
uv = PackedVector2Array(25.4755, 27.8717, 26.4433, 32.0011, 29.734, 35.937, 29.9276, 41.9377, 25.3465, 41.3569, 23.4108, 37.0339, 20.1201, 32.5818, 19.6684, 28.0007)
bones = ["leg2", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right/bottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right/top_right", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left/top_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left/bottom_left", PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_nectar", PackedFloat32Array(0, 0, 1, 1, 1, 1, 0, 0), "leg2/leg/lowtop_nectar/top_nectar", PackedFloat32Array(1, 1, 0.5, 0.5, 0.5, 0.5, 1, 1)]

[node name="nectar_down" type="Polygon2D" parent="poly"]
position = Vector2(56.7156, 38.1223)
offset = Vector2(-47.9511, -66.055)
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(48.9813, 63.0122, 49.8401, 68.243, 44.5312, 70.7414, 37.8169, 74.9573, 33.6791, 70.1168, 39.2222, 66.2912)
uv = PackedVector2Array(48.9813, 63.0122, 49.8401, 68.243, 44.5312, 70.7414, 37.8169, 74.9573, 33.6791, 70.1168, 39.2222, 66.2912)
bones = ["leg2", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right/bottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right/top_right", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left/top_left", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left/bottom_left", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_nectar", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_nectar/top_nectar", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowdown_nectar", PackedFloat32Array(1, 1, 0, 0, 0, 0), "leg2/leg/lowdown_nectar/down_nectar", PackedFloat32Array(0.5, 0.5, 1, 1, 1, 1), "leg2/leg/lowdown2_nectar", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowdown2_nectar/down2_nectar", PackedFloat32Array(0, 0, 0, 0, 0, 0)]

[node name="nectar_down2" type="Polygon2D" parent="poly"]
position = Vector2(56.7156, 38.1223)
offset = Vector2(-88.5627, -35.7187)
texture = ExtResource("2_bhdwo")
skeleton = NodePath("../../skeleton")
polygon = PackedVector2Array(90.679, 33.8424, 92.0671, 37.6735, 97.5084, 44.836, 94.3435, 49.7776, 86.9589, 42.7262, 85.7374, 32.7875)
uv = PackedVector2Array(90.679, 33.8424, 92.0671, 37.6735, 97.5084, 44.836, 94.3435, 49.7776, 86.9589, 42.7262, 85.7374, 32.7875)
bones = ["leg2", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_right/bottom_right", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_right/top_right", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_left/top_left", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowbottom_left/bottom_left", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_nectar", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowtop_nectar/top_nectar", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowdown_nectar", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowdown_nectar/down_nectar", PackedFloat32Array(0, 0, 0, 0, 0, 0), "leg2/leg/lowdown2_nectar", PackedFloat32Array(1, 0, 0, 0, 0, 1), "leg2/leg/lowdown2_nectar/down2_nectar", PackedFloat32Array(0, 1, 1, 1, 1, 0)]

[node name="skeleton" type="Skeleton2D" parent="."]
position = Vector2(-27.4006, 4.89297)

[node name="leg2" type="Bone2D" parent="skeleton"]
position = Vector2(82.6911, 86.1162)
rest = Transform2D(1, 0, 0, 1, 82.6911, 86.1162)

[node name="leg" type="Bone2D" parent="skeleton/leg2"]
position = Vector2(1.46789, -22.0184)
rest = Transform2D(1, 0, 0, 1, 1.46789, -22.0184)

[node name="lowbottom_right" type="Bone2D" parent="skeleton/leg2/leg"]
position = Vector2(1.95721, -28.8685)
rotation = 1.04323
scale = Vector2(1, 1)
rest = Transform2D(0.503432, 0.864035, -0.864035, 0.503432, 1.95721, -28.8685)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = -90.0

[node name="bottom_right" type="Bone2D" parent="skeleton/leg2/leg/lowbottom_right"]
position = Vector2(9.29664, -5.87156)
rest = Transform2D(1, 0, 0, 1, 9.29664, -5.87156)
auto_calculate_length_and_angle = false
length = 12.38
bone_angle = -25.946

[node name="lowtop_right" type="Bone2D" parent="skeleton/leg2/leg"]
position = Vector2(1.95721, -28.8684)
rest = Transform2D(1, 0, 0, 1, 1.95721, -28.8684)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = -90.0

[node name="top_right" type="Bone2D" parent="skeleton/leg2/leg/lowtop_right"]
position = Vector2(9.29664, -5.87156)
rest = Transform2D(1, 0, 0, 1, 9.29664, -5.87156)
auto_calculate_length_and_angle = false
length = 12.38
bone_angle = -25.946

[node name="lowtop_left" type="Bone2D" parent="skeleton/leg2/leg"]
position = Vector2(1.95721, -28.8684)
rotation = -2.02867
rest = Transform2D(-0.442042, -0.896994, 0.896994, -0.442042, 1.95721, -28.8684)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = -90.0

[node name="top_left" type="Bone2D" parent="skeleton/leg2/leg/lowtop_left"]
position = Vector2(9.29664, -5.87156)
rest = Transform2D(1, 0, 0, 1, 9.29664, -5.87156)
auto_calculate_length_and_angle = false
length = 12.38
bone_angle = -25.946

[node name="lowbottom_left" type="Bone2D" parent="skeleton/leg2/leg"]
position = Vector2(1.95721, -28.8685)
rotation = 2.93342
scale = Vector2(1, 1)
rest = Transform2D(-0.97841, 0.206672, -0.206672, -0.97841, 1.95721, -28.8685)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = -90.0

[node name="bottom_left" type="Bone2D" parent="skeleton/leg2/leg/lowbottom_left"]
position = Vector2(9.29664, -5.87156)
rest = Transform2D(1, 0, 0, 1, 9.29664, -5.87156)
auto_calculate_length_and_angle = false
length = 12.38
bone_angle = -25.946

[node name="lowtop_nectar" type="Bone2D" parent="skeleton/leg2/leg"]
position = Vector2(1.95721, -28.8685)
rotation = 1.04323
scale = Vector2(1, 1)
rest = Transform2D(0.503432, 0.864035, -0.864035, 0.503432, 1.95721, -28.8685)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = -90.0

[node name="top_nectar" type="Bone2D" parent="skeleton/leg2/leg/lowtop_nectar"]
position = Vector2(-6.23494, -1.93392)
rest = Transform2D(1, 0, 0, 1, -6.23494, -1.93392)
auto_calculate_length_and_angle = false
length = 6.805
bone_angle = -181.622

[node name="lowdown_nectar" type="Bone2D" parent="skeleton/leg2/leg"]
position = Vector2(1.95721, -28.8685)
rotation = -0.675401
scale = Vector2(1, 1)
rest = Transform2D(0.780456, -0.62521, 0.62521, 0.780456, 1.95721, -28.8685)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = -90.0

[node name="down_nectar" type="Bone2D" parent="skeleton/leg2/leg/lowdown_nectar"]
position = Vector2(-6.23494, -1.93392)
rest = Transform2D(1, 0, 0, 1, -6.23494, -1.93392)
auto_calculate_length_and_angle = false
length = 6.805
bone_angle = -181.622

[node name="lowdown2_nectar" type="Bone2D" parent="skeleton/leg2/leg"]
position = Vector2(1.95721, -28.8685)
rotation = -2.3703
rest = Transform2D(-0.717012, -0.697061, 0.697061, -0.717012, 1.95721, -28.8685)
auto_calculate_length_and_angle = false
length = 1.0
bone_angle = -90.0

[node name="down2_nectar" type="Bone2D" parent="skeleton/leg2/leg/lowdown2_nectar"]
position = Vector2(-6.23494, -1.93392)
rest = Transform2D(1, 0, 0, 1, -6.23494, -1.93392)
auto_calculate_length_and_angle = false
length = 6.805
bone_angle = -181.622

[node name="DetectionArea" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(57.8746, 57.8746)
shape = SubResource("RectangleShape2D_sergr")
